--- a/my_meal/web/index.html
+++ b/my_meal/web/index.html
@@ -38,6 +38,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+
 </head>
 <body>
   <script>
@@ -48,10 +49,11 @@
           serviceWorkerVersion: serviceWorkerVersion,
         },
         onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
-        }
+  let config = { renderer: 'html' };
+  engineInitializer.initializeEngine(config).then(function(appRunner) {
+    appRunner.runApp();
+  });
+}
       });
     });
   </script>
